--- a/task-manager-infrastructure/pom.xml
+++ b/task-manager-infrastructure/pom.xml
@@ -50,7 +50,15 @@
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
             <version>3.3.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
